# pythonseer

./: CHANGELOG.md  Makefile  README.md  Taskfile.yaml  __init__.py  pyproject.toml
.github/workflows/: publish_on_lemmy.py  pypi.yml  release_gen.yml  test.yml
examples/: censures.py  endorsements.py  hesitations.py  instance.py  suspicions.py
pythonseer/: __init__.py  censure.py  endorsement.py  fediseer.py  guarantee.py  hesitation.py  pythonseer.py  requestor.py  suspicions.py  whitelist.py
pythonseer/types/: __init__.py  format.py
tests/: test_whitelist.py
