[tool.poetry]
name = "pythonseer"
version = "0.2.1"
description = "A python library for interacting with the Fediseer API"
authors = ["db0 <mail@dbzer0.com>"]
readme = "README.md"
homepage="https://github.com/db0/pythonseer"
license = "GPL-3.0-or-later"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Development Status :: 2 - Pre-Alpha",
]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "--import-mode=prepend",
    "--ignore=nodes"
]
filterwarnings = [
    "ignore:::.*",
    "default:::pythonseer.*"
]
testpaths = [
    "tests"
]

[tool.black]
line-length = 119

[tool.ruff] # XXX this isn't part of CI yet
line-length=119
exclude=["build"]
ignore=[
    "F401", # imported but unused
    "E402", # Module level import not at top of file
    "A002", # Argument `x` is shadowing a python builtin
    "A001", # Variable `x` is shadowing a python builtin
    "INP001", # ... is part of an implicit namespace package. Add an `__init__.py`.
]
select = [
    "A",    # flake8-builtins
    "I",    # isort
    # "S",    # Bandit
    "F",    # pyflakes
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings


    "YTT",  # flake8-2020
    # "BLE",    # flake8-blind-except
    # "B",    # flake8-bugbear
    "COM",  # flake8-commas
    "C4",   # flake8-comprehensions
    # "G",    # flake8-logging-format
    "INP",  # flake8-no-pep420
    "PIE",  # flake8-pie
    # "T20",  # flake8-print
    # "UP",   # pyupgrade
    "RSE",  # flake8-raise
    # "RET",  # flake8-return
    # "SLF",  # flake8-self
    # "SIM",  # flake8-simplify
    # "ARG",  # flake8-unused-arguments
    # "TRY",  # tryceratops
    "RUF100"
]
